Add hello-sounds example - add wav files to .gitignore - update requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+hello-sounds/*.wav
 
 # The rest of this file was taken from: https://github.com/github/gitignore/blob/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
